Revert "Bugfix: headers overlap menu and make menu unclickable (try not to break scroll bar fix)"

--- a/sites/all/themes/mcneese/css/screen/screen-flow.css
+++ b/sites/all/themes/mcneese/css/screen/screen-flow.css
@@ -562,14 +562,11 @@
 
 .mcneese .mcneese-content,
 .mcneese .mcneese-content-main {
-  display: inline-block;
-  vertical-align: top;
+  display: inline;
   overflow-x: auto;
 
   margin: 0px;
   padding: 0px;
-
-  width: 100%;
 
   box-sizing: border-box;
   -moz-box-sizing: border-box;
